# go-dem

./: .gitignore  CMakeLists.txt  README.md  dem.go  go.mod  go.sum  output.go  raster_utils.go  raster_utils_test.go  region.go  region_test.go  srs_utils.go  srs_utils_test.go
build2/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  install_manifest.txt
build3/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
build3/gmt_ext-prefix/src/gmt_ext-stamp/: gmt_ext-source_dirinfo.txt
build3/gmt_ext-prefix/tmp/: gmt_ext-cfgcmd.txt  gmt_ext-mkdirs.cmake
build3/hdf5_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  cmake_install.cmake  hdf5-config.cmake  install_manifest.txt
build3/hdf5_build/hl/: Makefile  cmake_install.cmake
build3/hdf5_build/hl/src/: Makefile  cmake_install.cmake
build3/hdf5_build/src/: H5build_settings.c  Makefile  cmake_install.cmake
build3/hdf5_build/src/H5FDsubfiling/: Makefile  cmake_install.cmake
build3/hdf5_build/utils/: Makefile  cmake_install.cmake
build3/hdf5_ext-prefix/src/hdf5_ext-stamp/: hdf5_ext-source_dirinfo.txt
build3/hdf5_ext-prefix/tmp/: hdf5_ext-cfgcmd.txt  hdf5_ext-mkdirs.cmake
build3/netcdf_ext-prefix/tmp/: netcdf_ext-cfgcmd.txt  netcdf_ext-mkdirs.cmake
build5/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
build6/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
cmd/dem/: main.go
datalist/: lasfile.go  stack.go  stack_test.go  xyzfile.go
datum/: convert.go  datum_test.go  frames.go  htdp.go  transform.go  vdatum.go
delaunay/: delaunay.go  delaunay_test.go  doc.go  predicates.go
dem/gmt/: gmt.go  gmt_data.go  gmt_test.go
fetch/: fetch.go  noaa.go  sources.go
grits/: blend.go  blend_test.go  clip.go  clip_test.go  cut.go  cut_test.go  denoise.go  denoise_test.go  diff.go  diff_test.go  euclidean_distance.go  euclidean_distance_test.go  euclidean_merge.go  fill.go  fill_test.go  filter.go  filter_test.go  flats.go  flats_test.go  flatten_nodata.go  flatten_nodata_test.go  gmtfilter.go  grits.go  hydro.go  hydro_test.go  morphology.go  morphology_test.go  outliers.go  outliers_test.go  rivers.go  rivers_test.go  slope_filter.go  slope_filter_test.go  weights.go  weights_test.go  zscore.go  zscore_test.go
libs/darwin_arm/: htdp
libs/darwin_arm/cmake/: hdf5-config.cmake  hdf5-targets.cmake
libs/darwin_arm/include/: H5Dpublic.h  H5Gpublic.h  H5pubconf.h  gdal_alg.h  netcdf_meta.h  netcdf_proplist.h
libs/darwin_arm/include/hdf5/: H5Dmodule.h  H5Fmodule.h  H5Imodule.h  H5LTparse.h  H5Rpublic.h  H5TBpublic.h  H5private.h  H5public.h  H5version.h
libs/darwin_arm/lib/: libhdf5.settings
libs/darwin_arm/lib/pkgconfig/: hdf5.pc  hdf5_hl.pc
perspecto/: colorbar.go  colorbar_test.go  hillshade.go  hillshade_test.go  histogram.go  histogram_test.go  perspecto.go  perspecto_test.go
pipeline/: pipeline.go
pointz/: block_minmax.go  block_minmax_test.go  blockthin.go  blockthin_test.go  convex_hull.go  convex_hull_test.go  coplanar.go  coplanar_test.go  density.go  density_test.go  diffz.go  diffz_test.go  filter.go  ground_rectification.go  ground_rectification_internal_test.go  ground_rectification_test.go  outlierz.go  outlierz_test.go  partition.go  partition_test.go  plane3d.go  plane3d_test.go  rangez.go  rangez_test.go  ransac.go  ransac_test.go  raster_mask.go  raster_mask_test.go  smrf.go  smrf_internal_test.go  smrf_test.go  subsample.go  vector_mask.go  vector_mask_test.go
scripts/: build_deps.sh
uncertainty/: uncertainty.go  uncertainty_test.go
waffle/: cube.go  cudem.go  gmt.go  griddata.go  helpers.go  idw.go  inpaint.go  inpaint_test.go  kdtree.go  kdtree_test.go  kriging.go  moving_average.go  moving_average_test.go  natural_neighbor.go  points.go  waffle.go  waffle_test.go
